blueprints/patterns/p13-gdc-dev/manifests/gdc/gdc-dev-phase3-deployment.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gdc-dev-operator
  namespace: gdc-dev
  labels:
    app.kubernetes.io/name: gdc-dev-operator
    app.kubernetes.io/component: phase3-agentic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gdc-dev-operator
  template:
    metadata:
      labels:
        app: gdc-dev-operator
    spec:
      serviceAccountName: gdc-dev-operator-sa
      containers:
      - name: operator
        image: us-central1-docker.pkg.dev/test-project/blueprint-images/gdc-dev-operator:latest # kpt-set: ${registry-host}/gdc-dev-operator:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: session
        - containerPort: 8080
          name: health
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gdc-dev-landing-page
  namespace: gdc-dev
  labels:
    app.kubernetes.io/name: gdc-dev-landing-page
    app.kubernetes.io/component: phase3-agentic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gdc-dev-landing-page
  template:
    metadata:
      labels:
        app: gdc-dev-landing-page
    spec:
      serviceAccountName: gdc-dev-operator-sa
      containers:
      - name: landing-page
        image: us-central1-docker.pkg.dev/test-project/blueprint-images/gdc-dev-landing-page:latest # kpt-set: ${registry-host}/gdc-dev-landing-page:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
