blueprints/patterns/p13-gdc-dev/manifests/gdc/loadbalancer.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: gdc-dev-loadbalancer
  namespace: gdc-dev
  labels:
    app.kubernetes.io/name: gdc-dev
    app.kubernetes.io/component: ingress-loadbalancer
  annotations:
    # GDC Air-Gapped Platform Load Balancer Annotation
    # Directs the GDC in-cluster load balancer controller (MetalLB / Seesaw / F5)
    # to allocate a dedicated ingress VIP from the cluster's internal load balancer pool.
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    app: gdc-dev-landing-page
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8080
    protocol: TCP
